--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdi/js": "^5.9.55",
+    "@mdi/react": "^1.5.0",
     "@types/styled-components": "^5.1.9",
     "bulma": "^0.9.2",
     "next": "10.2.0",
