--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/react": "^1.5.0",
     "@types/styled-components": "^5.1.9",
     "bulma": "^0.9.2",
+    "copy-to-clipboard": "^3.3.1",
     "next": "10.2.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
