--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/styled-components": "^5.1.9",
     "bulma": "^0.9.2",
     "copy-to-clipboard": "^3.3.1",
+    "gray-matter": "^4.0.3",
     "next": "10.2.0",
     "nprogress": "^0.2.0",
+    "raw-loader": "^4.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.2.3"
