--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@types/styled-components": "^5.1.9",
     "bulma": "^0.9.2",
     "copy-to-clipboard": "^3.3.1",
+    "dotenv": "^10.0.0",
+    "google-charts": "^2.0.0",
     "gray-matter": "^4.0.3",
     "next": "10.2.0",
     "nprogress": "^0.2.0",
     "raw-loader": "^4.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-google-charts": "^3.0.15",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
