--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gray-matter": "^4.0.3",
     "next": "10.2.0",
     "nprogress": "^0.2.0",
+    "prettier": "^2.3.1",
     "raw-loader": "^4.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
