--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-google-charts": "^3.0.15",
+    "react-markdown": "^6.0.2",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
