--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "17.0.2",
     "react-google-charts": "^3.0.15",
     "react-markdown": "^6.0.2",
+    "sass": "^1.43.4",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
