--- a/package.json
+++ b/package.json
@@ -13,22 +13,23 @@
     "@types/styled-components": "^5.1.9",
     "bulma": "^0.9.2",
     "copy-to-clipboard": "^3.3.1",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.1",
     "google-charts": "^2.0.0",
     "gray-matter": "^4.0.3",
-    "next": "10.2.0",
+    "next": "12.1.6",
     "nprogress": "^0.2.0",
     "prettier": "^2.3.1",
     "raw-loader": "^4.0.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-google-charts": "^3.0.15",
-    "react-markdown": "^6.0.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-google-charts": "^4.0.0",
+    "react-markdown": "^8.0.3",
     "sass": "^1.43.4",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
-    "@types/react": "^17.0.4",
+    "@types/node": "^17.0.39",
+    "@types/react": "^18.0.10",
     "typescript": "^4.2.4"
   }
 }
