--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "@mdi/js": "^6.7.96",
     "@mdi/react": "^1.5.0",
-    "@types/styled-components": "^5.1.9",
     "bulma": "^0.9.2",
     "copy-to-clipboard": "^3.3.1",
     "dotenv": "^16.0.1",
@@ -24,8 +23,7 @@
     "react-dom": "18.1.0",
     "react-google-charts": "^4.0.0",
     "react-markdown": "^8.0.3",
-    "sass": "^1.43.4",
-    "styled-components": "^5.2.3"
+    "sass": "^1.43.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.39",
