--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@mdi/js": "^6.7.96",
     "@mdi/react": "^1.6.0",
     "bulma": "^0.9.4",
     "copy-to-clipboard": "^3.3.1",
@@ -16,6 +15,7 @@
     "google-charts": "^2.0.0",
     "gray-matter": "^4.0.3",
     "next": "12.1.6",
+    "npm-check-updates": "^15.3.4",
     "nprogress": "^0.2.0",
     "prettier": "^2.7.1",
     "raw-loader": "^4.0.2",
