--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdi/js": "^6.9.96",
     "@mdi/react": "^1.6.0",
+    "@react-google-maps/api": "^2.20.3",
     "bulma": "^0.9.4",
     "copy-to-clipboard": "^3.3.1",
     "dotenv": "^16.0.1",
